@@ -44,7 +44,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import static org.ballerinalang.langserver.completions.util.SortingUtil.genSortText;
 import static org.ballerinalang.langserver.completions.util.SortingUtil.genSortTextForModule;
@@ -120,7 +119,7 @@ public class ServiceDeclarationNodeContext extends ObjectBodiedNodeContextProvid
                 List<Symbol> visibleSymbols = context.visibleSymbols(context.getCursorPosition());
                 List<Symbol> listeners = visibleSymbols.stream()
                         .filter(predicate)
-                        .collect(Collectors.toList());
+                        .toList();
                 completionItems.addAll(this.getCompletionItemList(listeners, context));
                 completionItems.addAll(this.getModuleCompletionItems(context));
                 completionItems.add(new SnippetCompletionItem(context, Snippet.KW_NEW.get()));
